--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 # These are supported funding model platforms
 
 github: [christian1980nrw]
-custom: ["https://paypal.me/christian1980nrw"]
+custom: ["https://revolut.me/christqki2"]
 
