--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,6 @@ jobs:
       run: sudo apt-get install shellcheck
 
     - name: Lint shell script
-      run: chmod +x ./data/etc/Spotmarket-Switcher/controller.sh
-      run: shellcheck ./data/etc/Spotmarket-Switcher/controller.sh
+      run: |
+        chmod +x ./data/etc/Spotmarket-Switcher/controller.sh
+        shellcheck ./data/etc/Spotmarket-Switcher/controller.sh
