--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,13 +11,23 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-
     - name: Install ShellCheck
-      run: sudo apt-get install shellcheck
-
+      run:  sudo apt-get install shellcheck
     - name: Lint all shell scripts
-      run: find . -name "*.sh" | xargs shellcheck
+      run:  find . -name "*.sh" | xargs shellcheck
+  execute:
+    runs-on: ubuntu-latest
+    steps: 
+    - name: Checkout code
+      uses: actions/checkout@v3
+    - name: Extend default set of UNIX tools
+      run:  sudo apt-get install wget curl dbus sed gawk
+    - name: Install
+      run:  DEBUG=1 DESTDIR="/tmp/testing" ./victron-venus-os-install.sh
+    - name: Control
+      run:  DEBUG=1 LOG_FILE="/tmp/testing_controller.log" data/etc/Spotmarket-Switcher/controller.sh
+    - name: Run
+      run:  DEBUG=1 rc_local_file="/tmp/testing_rc.local" data/etc/Spotmarket-Switcher/service/run
