parent 60f679a91a538c27a81fe712a2074a4ea2fac189 author Steffen Moeller <moeller@debian.org> 1692475940 +0200 committer Steffen Moeller <moeller@debian.org> 1692485533 +0200
Add NO_REBOOT env setting

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,21 @@
 name: basic
-on: [push]
+on:
+  push:
+  pull_request:
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Install ShellCheck
-        run: sudo apt-get install shellcheck
-      - name: Lint all shell scripts
-        run: find . -name "*.sh" | xargs -r shellcheck
       - name: Install yamllint
         run: sudo apt-get install yamllint
       - name: Yamllint all YAML files
         run: find . -name "*.yml" | xargs -r yamllint
+      - name: Install ShellCheck
+        run: sudo apt-get install shellcheck
+      - name: Lint all shell scripts
+        run: find . -name "*.sh" | xargs -r shellcheck
   execute:
     runs-on: ubuntu-latest
     steps:
@@ -24,15 +26,15 @@ jobs:
       - name: Install
         run: ./victron-venus-os-install.sh
         env:
-         DEBUG: 1
-         DESTDIR: /tmp/testing
+          DEBUG: 1
+          DESTDIR: /tmp/testing
       - name: Control
         run: data/etc/Spotmarket-Switcher/controller.sh
         env:
-         DEBUG: 1
-         LOG_FILE: /tmp/testing_controller.log
+          DEBUG: 1
+          LOG_FILE: /tmp/testing_controller.log
       - name: Run
         run: data/etc/Spotmarket-Switcher/service/run
         env:
-         DEBUG: 1
-         rc_local_file: /tmp/testing_rc.local
+          DEBUG: 1
+          rc_local_file: /tmp/testing_rc.local
