--- a/.github/workflows/venus.yml
+++ b/.github/workflows/venus.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
 
 jobs:
-  container-test-job:
+  docker:
     runs-on: ubuntu-latest
     container:
       image: victronenergy/venus-docker
@@ -30,12 +30,14 @@ jobs:
           if ./victron-venus-os-install.sh ; then
              echo "[OK]"
           else
-             docker ps
              echo "[FAIL]"
+             pwd
+             find . | head -n 30
              exit 1
           fi
         env:
           NO_REBOOT: 1
+          DEBUG: 1
       - name: Execute Run-Script under Venus OS
         run: /data/etc/Spotmarket-Switcher/service/run
         env:
@@ -50,46 +52,3 @@ jobs:
           fi
         env:
           DEBUG: 1
-  docker:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Install docker package
-        run: |
-          sudo apt update
-          sudo apt install apt-transport-https ca-certificates curl software-properties-common aptitude
-          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
-      - name: Add external repository
-        run: |
-          echo "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-          #echo "deb [arch=arm64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-          sudo apt update
-          sudo apt install docker-ce docker-ce-cli containerd.io
-      - name: Start docker service
-        run: sudo systemctl start docker && sudo systemctl enable docker
-      - name: Allow me to use docker
-        run: sudo usermod -aG docker $(whoami)
-      - name: Show docker version
-        run: docker --version
-      - name: Retrieve docker image
-        run: docker pull victronenergy/venus-docker
-      - name: Run docker image
-        run: docker run -d --name venus-container -v "$(pwd)":/host victronenergy/venus-docker
-      - name: Check for dockerenv file
-        run: |
-          (ls /.dockerenv && echo I: Found dockerenv) || (echo W: No dockerenv)
-      - name: Show running instances and execute Installation under Venus OS
-        run: |
-          docker ps
-          echo -n pwd: ; pwd
-          ls -l
-          docker exec "$(docker ps| grep venus-container | cut -f1 -d' ')" ./victron-venus-os-install.sh
-        env:
-          NO_REBOOT: 1
-      - name: Execute Control-Script under Venus OS
-        run: docker exec "$(docker ps| grep venus-container | cut -f1 -d' ')" /data/etc/Spotmarket-Switcher/controller.sh
-      - name: Execute Run-Script under Venus OS
-        run: sudo data/etc/Spotmarket-Switcher/service/run
-      - name: Be nice and exit the container
-        run: exit
