--- a/.github/workflows/venus.yml
+++ b/.github/workflows/venus.yml
@@ -19,7 +19,7 @@ jobs:
           if which apt > /dev/null
           then
              apt update
-             apt install wet curl
+             apt install wget curl
           elif which opkg > /dev/null
           then
              opkg install wget
