--- a/.github/workflows/venus.yml
+++ b/.github/workflows/venus.yml
@@ -11,7 +11,11 @@ jobs:
       options: --cpus 1
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2  # Version 2
+
+      - name: Copy config sample
+        run: cp scripts/sample.config.txt scripts/config.txt
+      
       - name: Check for dockerenv file
         run: (ls /.dockerenv && echo Found dockerenv) || (echo No dockerenv)
       - name: Install more UNIX tools
@@ -39,7 +43,7 @@ jobs:
           else
              echo "[FAIL]"
              pwd
-             find . | head -n 30
+             find . | head -n 30
              exit 1
           fi
         env:
