--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,6 +82,7 @@ jobs:
           DEBUG: 1
           DESTDIR: /tmp/testing
           BRANCH: ${{ steps.set-branch-name.outputs.branch_name }}
+          ACTOR: ${{ github.actor }}
       - name: Execute Run-Script
         run: /tmp/testing//data/etc/Spotmarket-Switcher/service/run
         env:
