--- a/.github/workflows/venus.yml
+++ b/.github/workflows/venus.yml
@@ -29,6 +29,9 @@ jobs:
           fi
       - name: Set script permissions
         run: chmod +x ./victron-venus-os-install.sh
+      - name: Extract branch name
+        shell: bash
+        run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV        
       - name: Execute Installation under Venus OS
         run: |
           echo pwd
@@ -48,7 +51,7 @@ jobs:
         env:
           NO_REBOOT: 1
           DEBUG: 1
-          BRANCH: ${{ steps.set-branch-name.outputs.branch_name }}
+          BRANCH: ${{ env.BRANCH_NAME }}
           ACTOR: ${{ github.actor }}
       - name: Execute Run-Script under Venus OS
         run: /data/etc/Spotmarket-Switcher/service/run
