--- a/.github/workflows/venus.yml
+++ b/.github/workflows/venus.yml
@@ -10,6 +10,9 @@ jobs:
       image: victronenergy/venus-docker
       options: --cpus 1
     steps:
+      - name: Set BRANCH_NAME from github.ref
+        id: extract_branch
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/} | sed 's/refs\/pull\/.*\///' | sed 's/\/merge//')"
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Check for dockerenv file
@@ -29,9 +32,6 @@ jobs:
           fi
       - name: Set script permissions
         run: chmod +x ./victron-venus-os-install.sh
-      - name: Extract branch name
-        shell: bash
-        run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
       - name: Execute Installation under Venus OS
         run: |
           echo pwd
@@ -51,7 +51,7 @@ jobs:
         env:
           NO_REBOOT: 1
           DEBUG: 1
-          BRANCH: ${{ env.BRANCH_NAME }}
+          BRANCH: ${{ steps.extract_branch.outputs.branch }}
           ACTOR: ${{ github.actor }}
       - name: Execute Run-Script under Venus OS
         run: /data/etc/Spotmarket-Switcher/service/run
