--- a/.github/workflows/venus.yml
+++ b/.github/workflows/venus.yml
@@ -10,9 +10,9 @@ jobs:
       image: victronenergy/venus-docker
       options: --cpus 1
     steps:
-      - name: Set BRANCH_NAME from github.ref
+      - name: Extract branch name
         id: extract_branch
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/} | sed 's/refs\/pull\/.*\///' | sed 's/\/merge//')"
+        run: echo "BRANCH_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV      
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Check for dockerenv file
@@ -51,7 +51,7 @@ jobs:
         env:
           NO_REBOOT: 1
           DEBUG: 1
-          BRANCH: ${{ steps.extract_branch.outputs.branch }}
+          BRANCH: ${{ env.BRANCH_NAME }}
           ACTOR: ${{ github.actor }}
       - name: Execute Run-Script under Venus OS
         run: /data/etc/Spotmarket-Switcher/service/run
