--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ jobs:
   yamllint:
     runs-on: ubuntu-latest
     steps:
-      - name: Set BRANCH_NAME from github.ref
-        id: extract_branch
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/} | sed 's/refs\/pull\/.*\///' | sed 's/\/merge//')"
+      - name: Set branch name
+        id: set_branch
+        run: echo "BRANCH_NAME=${GITHUB_HEAD_REF}" >> $GITHUB_ENV
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Install yamllint
@@ -72,6 +72,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Extend default set of UNIX tools
         run: |
+          echo "BRANCH = ${{ env.BRANCH_NAME }}"
           if [ "ubuntu-latest" = ${{ matrix.os }} ]; then
             sudo apt-get install wget curl dbus sed gawk
           else
@@ -84,7 +85,7 @@ jobs:
         env:
           DEBUG: 1
           DESTDIR: /tmp/testing
-          BRANCH: ${{ steps.extract_branch.outputs.branch }}
+          BRANCH: ${{ env.BRANCH_NAME }}
           ACTOR: ${{ github.actor }}
       - name: Execute Run-Script
         run: /tmp/testing//data/etc/Spotmarket-Switcher/service/run
